--- a/config.local.yaml
+++ b/config.local.yaml
@@ -1,7 +1,17 @@
 hosts:
-  - chassis.local
+  - composer.local
 
-paths:
-  base: ../../..
-  wp: vendor/chassis/chassis/wp
-  content: vendor/chassis/chassis/content
+plugins:
+   - query-monitor
+
+themes:
+   - twentyfifteen
+
+extensions:
+   - Tester
+
+disabled_extensions:
+   - chassis/mailhog
+
+synced_folders:
+  ../init: /chassis/content/plugins/this-plugin
